--- a/css/style.css
+++ b/css/style.css
@@ -774,10 +774,10 @@ body:after {
       z-index: 2;
       position: absolute;
       content: "";
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
+      top: auto;
+      left: auto;
+      right: auto;
+      bottom: auto;
       background: rgba(0, 0, 0, 0.4);
       visibility: hidden;
       opacity: 0;
@@ -969,9 +969,8 @@ body:after {
 }
 
 .middle{
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
+  position: relative;
+  top: auto;
   width: 100%;
   text-align: center;
 }
